--- a/src/app/admin/add-page/add-page.component.html
+++ b/src/app/admin/add-page/add-page.component.html
@@ -1,1 +1,42 @@
-<p>add-page works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <h2 class="text-center">Add product</h2>
+
+  <div class="form-control">
+    <label for="type">Type</label>
+    <select id="type" formControlName="type">
+      <option value="phone">Phone</option>
+      <option value="tablet">Tablet</option>
+      <option value="laptop">Laptop</option>
+    </select>
+    <div class="validation" *ngIf="form.get('type').touched && form.get('type').invalid">
+      <small *ngIf="form.get('type').errors.required">выбертте тип товара</small>
+    </div>
+  </div>
+
+  <div class="form-control">
+    <label for="title">Name</label>
+    <input id="title" type="title" formControlName="title">
+    <div class="validation" *ngIf="form.get('title').touched && form.get('title').invalid">
+      <small *ngIf="form.get('title').errors.required">выберте название товара</small>
+    </div>
+  </div>
+
+  <div class="form-control">
+    <label for="photo">Photo</label>
+    <quill-editor id="photo" formControlName="photo"></quill-editor>
+  </div>
+
+  <div class="form-control">
+    <label for="information">Information</label>
+    <quill-editor id="information" formControlName="information"></quill-editor>
+  </div>
+
+  <div class="form-control">
+    <label for="price">Price</label>
+    <input id="price" type="price" formControlName="price">
+    <div class="validation" *ngIf="form.get('price').touched && form.get('price').invalid">
+      <small *ngIf="form.get('price').errors.required">введите цену товара</small>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submitted">Add</button>
+</form>
