--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,25 @@
-<p>login-page works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+
+  <h2>Login as admin</h2>
+
+  <div class="form-control">
+    <label for="email">Email</label>
+    <input  id="email"  type="email" formControlName="email">
+    <div *ngIf="form.get('email').touched && form.get('email').invalid" class="validation">
+      <small *ngIf="form.get('email').errors.required">Enter Email</small>
+      <small *ngIf="form.get('email').errors.email">Enter Valid Email</small>
+    </div>
+  </div>
+  <div class="form-control">
+    <label for="password">Password</label>
+    <input  id="password" type="password" class="form-control" formControlName="password">
+    <div *ngIf="form.get('password').touched && form.get('password').invalid" class="validation">
+      <small *ngIf="form.get('password').errors.required">Enter Password</small>
+      <small *ngIf="form.get('password').errors.minlength">Password must be at least 6
+        {{form.get('password').errors.minlength.requiredlength}} symbols. Now it
+        {{form.get('password').errors.minlength.actualLength}}
+      </small>
+    </div>
+  </div>
+<button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submitted">Login</button>
+</form>
