--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -4,7 +4,7 @@
     <quill-view-html [content]="product.photo"></quill-view-html>
   </div>
   <h2>price: {{product.price}} $</h2>
-  <quill-view-html [content]="product.info"></quill-view-html>
-  <button [routerLink]="['/product', 'product.id']" class="btn btn-dark">Open</button>
+  <quill-view-html [content]="product.information"></quill-view-html>
+  <button [routerLink]="['/product', product.id]" class="btn btn-dark">Open</button>
   <button [routerLink]="['/card']" class="btn btn-dark">Add to Card</button>
 </div>
