--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,7 +17,7 @@
       <div class="item">
         <h2>Information:</h2>
         <div>
-          <quill-view-html [content]="product.info"></quill-view-html>
+          <quill-view-html [content]="product.information"></quill-view-html>
         </div>
 
       </div>
