--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="products$ | async as products" class="dashboard">
-  <app-product-item *ngFor="let product of products" [product]="product" class="box">
+  <app-product-item *ngFor="let product of products | sorting: productServ.type" [product]="product"
+                    class="box">
 
   </app-product-item>
 </div>
