--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -11,7 +11,7 @@
         </div>
         <div>
           <h2>Price: {{product.price}} $</h2>
-          <button class="btn btn-dark" [routerLink]="['/card']">add to card</button>
+          <button class="btn btn-dark" [routerLink]="['/card']" (click)="addProduct(product)">add to card</button>
         </div>
       </div>
       <div class="item">
