--- a/src/app/card-page/card-page.component.html
+++ b/src/app/card-page/card-page.component.html
@@ -5,7 +5,9 @@
     <tr *ngFor="let cartProduct of cartProducts; let i = index">
       <td>{{cartProduct.type}}</td>
       <td>{{cartProduct.title}}</td>
-      <td><button class="btn btn-danger">Delete</button></td>
+      <td>
+        <button (click)="delete(cartProduct)" class="btn btn-danger">Delete</button>
+      </td>
       <td>{{cartProduct.price}} $</td>
 
     </tr>
@@ -13,6 +15,51 @@
   </table>
   <hr>
   <b class="right">Total: {{totalPrice}} $</b>
+  <h2 class="text-center">
+    Delivery:
+  </h2>
+  <div *ngIf="added" class="text-center text-danger">
+    {{added}}
+  </div>
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="form-control">
+      <label for="name">Name</label>
+      <input id="name" type="name" formControlName="name">
+      <div class="validation" *ngIf="form.get('name').touched && form.get('name').invalid">
+        <small *ngIf="form.get('name').errors.required">Please, enter your name</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="phone">Phone number</label>
+      <input id="phone" type="phone" formControlName="phone">
+      <div class="validation" *ngIf="form.get('phone').touched && form.get('phone').invalid">
+        <small *ngIf="form.get('phone').errors.required">Please, enter your phone</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="address">Delivery address</label>
+      <input id="address" type="address" formControlName="address">
+      <div class="validation" *ngIf="form.get('address').touched && form.get('address').invalid">
+        <small *ngIf="form.get('address').errors.required">Please, enter your address</small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <label for="payment">Payment Method</label>
+      <select id="payment" formControlName="payment">
+        <option value="card">card</option>
+        <option value="cash">cash</option>
+      </select>
+    </div>
+
+
+    <button type="submit" (click)="submit()" class="btn btn-primary btn-block"
+            [disabled]="form.invalid || submitted">Add
+    </button>
+  </form>
+
 </div>
 <ng-template #empty>
   <h2 class="text-center">
