--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@ img {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
 }
 
 .flex-center {
